--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
 version: '2'
 services:
   caravel:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
     - "8088:8088"
     depends_on:
     - db
     environment:
-    - SQLALCHEMY_DATABASE_URI=mysql+pymysql://mysqladmin:FIXME_12345@db:3306/db
+      SQLALCHEMY_DATABASE_URI: mysql://mysqladmin:FIXME_12345@db/db
     entrypoint: ./wait-for-it.sh db:3306 -- ./docker-entrypoint.sh
   
   db:
-    image: mysql:5.6
+    image: mysql:5.7
     environment:
-    - MYSQL_ROOT_PASSWORD=FIXME_1234567890
-    - MYSQL_DATABASE=db
-    - MYSQL_USER=mysqladmin
-    - MYSQL_PASSWORD=FIXME_12345
-    - MYSQL_PORT=3306
+      MYSQL_ROOT_PASSWORD: FIXME_1234567890
+      MYSQL_DATABASE: db
+      MYSQL_USER: mysqladmin
+      MYSQL_PASSWORD: FIXME_12345
+      MYSQL_PORT: 3306
     ports:
     - "3306:3306"
 
